[metadata]

name = JetMonteCarlo
description = Python package for the Monte Carlo generation of jets and calculation of jet observables.
author = Samuel Alipour-fard
author_email = samuelaf@mit.edu

[options]

packages = find:
python_requires =
    >= 3.6
install_requires =
    mpmath      >= 1.1.0
    cycler      >= 0.10.0
    matplotlib  >= 3.1.1
    dill        == 0.3.2
    numpy       >= 1.17.3
    scipy       >= 1.5.2
    PyPDF2      >= 1.26.0
setup_requires=
    pytest-runner

[options.package_data]

* =
    data/*

[bdist_wheel]

universal = 1

[aliases]

test = pytest
